--- a/ios/AnnotationAccPackKit/OTAnnotationKit.xcodeproj/xcshareddata/xcschemes/OTAnnotationKitBundle.xcscheme
+++ b/ios/AnnotationAccPackKit/OTAnnotationKit.xcodeproj/xcshareddata/xcschemes/OTAnnotationKitBundle.xcscheme
@@ -5,6 +5,22 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "A0AB58341D2C4FDF00F8410B"
+               BuildableName = "OTAnnotationKitBundle.bundle"
+               BlueprintName = "OTAnnotationKitBundle"
+               ReferencedContainer = "container:OTAnnotationKit.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
@@ -12,26 +28,7 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "A0AB576C1D2C392D00F8410B"
-               BuildableName = "OTAnnotationKitTests.xctest"
-               BlueprintName = "OTAnnotationKitTests"
-               ReferencedContainer = "container:OTAnnotationAccPackKit.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A0DB6E471D230BC900E14C86"
-            BuildableName = "OTAnnotationAccPackKit.app"
-            BlueprintName = "OTAnnotationAccPackKit"
-            ReferencedContainer = "container:OTAnnotationAccPackKit.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -45,16 +42,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A0DB6E471D230BC900E14C86"
-            BuildableName = "OTAnnotationAccPackKit.app"
-            BlueprintName = "OTAnnotationAccPackKit"
-            ReferencedContainer = "container:OTAnnotationAccPackKit.xcodeproj">
+            BlueprintIdentifier = "A0AB58341D2C4FDF00F8410B"
+            BuildableName = "OTAnnotationKitBundle.bundle"
+            BlueprintName = "OTAnnotationKitBundle"
+            ReferencedContainer = "container:OTAnnotationKit.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -67,10 +63,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A0DB6E471D230BC900E14C86"
-            BuildableName = "OTAnnotationAccPackKit.app"
-            BlueprintName = "OTAnnotationAccPackKit"
-            ReferencedContainer = "container:OTAnnotationAccPackKit.xcodeproj">
+            BlueprintIdentifier = "A0AB58341D2C4FDF00F8410B"
+            BuildableName = "OTAnnotationKitBundle.bundle"
+            BlueprintName = "OTAnnotationKitBundle"
+            ReferencedContainer = "container:OTAnnotationKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
