--- a/ios/AnnotationAccPackKit/Podfile
+++ b/ios/AnnotationAccPackKit/Podfile
@@ -1,20 +1,11 @@
-platform :ios, '8.0'
+platform :ios, '9.0'
 
 def shared_pods
-	pod 'LHToolbar', '1.3.0-beta'
-    pod 'OTAcceleratorPackUtil', '~> 1.2.4'
-    pod 'OTScreenShareKit', '~> 1.1.6'
-end
-
-target 'OTAnnotationAccPackKit' do 
-	shared_pods
+	pod 'LHToolbar', '= 1.3.0-beta'
+    pod 'OTAcceleratorCore'
 end
 
 target 'OTAnnotationKit' do
-    shared_pods
-end
-
-target 'OTAnnotationKitStatic' do
     shared_pods
 end
 
